ajout autres pages

--- a/cest-nous/public/index.html
+++ b/cest-nous/public/index.html
@@ -13,6 +13,8 @@
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
+    <script src="https://kit.fontawesome.com/3e0bc65c16.js" crossorigin="anonymous"></script>
+
     <title>C'est Nous</title>
   </head>
   <body>
